--- a/test.html
+++ b/test.html
@@ -23,6 +23,7 @@
   <h1>Percobaan KeDua harus berhasil</h1>
   <h2>Yee bershasil</h2>
   <p>using terminal</p>
+  <p>dari browser</p>
   <div class="container">
     <div class="row">
       <div class="col-4">
