git control atom

--- a/test.html
+++ b/test.html
@@ -24,6 +24,9 @@
   <h2>Yee bershasil</h2>
   <p>using terminal</p>
   <p>dari browser</p>
+  
+  <p>dari browser diterima menggunakan git control atom</p>
+  
   <div class="container">
     <div class="row">
       <div class="col-4">
